Made some adjustment to prevent the footer content and the main content from overlapping

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,13 +4,11 @@
 
 
 body{
-display: flex;
-flex-direction: column;
 min-height: 100vh;
 position: relative;
 }
 
 
 main{
-    padding-bottom:200px;
+    padding-bottom:20px;
 }
